2007-12-30  Torsten Rahn  <rahn@kde.org>

    * src/lib/VectorMap.cpp: Fixed last "turns-white" bug

2007-12-30    Inge Wallin  <inge@lysator.liu.se>

	Save and restore the current map theme in the settings.
	* src/marble.kcfg: add mapTheme as a setting of type string.
	* src/marble_part.cpp (readSettings): Read mapTheme
	(writeSettings): Write mapTheme
	* src/QtMainWindow.cpp (readSettings): Read mapTheme
	(writeSettings): Write mapTheme

2007-12-30  Torsten Rahn  <rahn@kde.org>

    - Fixed order of Feature appearance (still could
      have some fine tuning)
    - Changed QDataStream format to 4_2

    * src/lib/PlaceMarkLayout.cpp
    * src/lib/PlaceMarkContainer.cpp
    * src/lib/MarblePlacemarkModel.cpp
    * src/lib/PlaceMarkManager.cpp
    * src/lib/geodata/data/GeoDataFeature.cpp
    * data/placemarks/baseplacemarks.cache
    * data/placemarks/elevplacemarks.cache
    * data/placemarks/otherplacemarks.cache
    * data/placemarks/boundaryplacemarks.cache
    * data/placemarks/cityplacemarks.cache

2007-12-29  Torsten Rahn  <rahn@kde.org>

    Instead of saving VisualCategories, Popularity and
    PopularityIndex we create them on the fly.
    Reduces file size and reduces my headaches a bit. 

    * src/lib/MarblePlacemarkModel.h
    * src/lib/XmlHandler.cpp
    * src/lib/MarblePlacemarkModel.cpp
    * src/lib/PlaceMarkManager.cpp
    * src/lib/VectorMap.cpp
    * src/lib/XmlHandler.h
    * src/lib/GeoPolygon.cpp
    * data/placemarks/baseplacemarks.cache
    * data/placemarks/elevplacemarks.cache
    * data/placemarks/otherplacemarks.cache
    * data/placemarks/boundaryplacemarks.cache
    * data/placemarks/cityplacemarks.cache

2007-12-28  Inge Wallin  <inge@lysator.liu.se>

	Save projection too in KDE version.
	* src/marble.kcfg: Added projection to variables.
	* src/marble_part.cpp (writeSettings): Write projection
	(readSettings): read projection

	Fix includes so that using the widget from an external program
	works again.